[workspace]
resolver = "2"
members = [
    "projects/hello_cargo",
    "projects/guessing_game",
    "projects/variables",
    "projects/data_types",
    "projects/control_flow",
    "projects/temperature_conversion",
    "projects/fibonacci",
    "projects/twelve_days_of_christmas",
    "projects/ownership",
    "projects/borrowing",
    "projects/slices",
    "projects/structs",
    "projects/rectangles",
]
